# drop

./: .gitignore  .gitmodules  README.md  index.html  pyproject.toml  ruff.toml  setup.sh
.devcontainer/: devcontainer.json
cro/: conversion.py  corrector.py  perseus.py  utils.py
cube_rotation_ws/src/cro_control/: CMakeLists.txt  package.xml
cube_rotation_ws/src/cro_control/cmake/: FindOrFetch.cmake
cube_rotation_ws/src/cro_control/src/: cro_controller.cpp
cube_rotation_ws/src/cro_estimation/: package.xml  setup.cfg  setup.py
cube_rotation_ws/src/cro_estimation/cro_estimation/: cro_estimator.py
cube_rotation_ws/src/cro_ros/: package.xml  setup.cfg  setup.py
cube_rotation_ws/src/cro_ros/ckpts/: perseus.pth  perseus_depth.pth
cube_rotation_ws/src/cro_ros/config/: cem.yaml  cube_sysid.yaml  half_rollouts.yaml  hardware.yaml  ilqg.yaml  leap_sysid.yaml  no_corrector.yaml  ps.yaml  rgb.yaml  zed_params.yaml
cube_rotation_ws/src/cro_ros/launch/: cro.launch.py
cube_rotation_ws/src/cro_ros/mujoco/: _cube.xml  leap_rh_cube.xml  leap_rh_cube_settings.xml  leap_rh_no_cube.xml
cube_rotation_ws/src/cro_ros/rviz/: cro_config.rviz
cube_rotation_ws/src/cro_ros/urdf/cube/: cube.urdf  cube.urdf.xacro  cube.xacro  cube_ghost.urdf  cube_ghost.urdf.xacro  cube_goal.urdf  cube_goal.urdf.xacro
cube_rotation_ws/src/cro_ros/urdf/cube/meshes/: cube.mtl
cube_rotation_ws/src/cro_ros/urdf/leap/: leap_rh_mounted.urdf  leap_rh_mounted.urdf.xacro  leap_rh_mounted_viz.urdf  leap_rh_mounted_viz.urdf.xacro
docker/: Dockerfile  docker-compose.yml
scripts/: .cro_aliases  cam_transform_to_quat.py
static/css/: index.css
static/js/: bulma-carousel.min.js  full-carousel.js  full-carousel.min.js  full-slider.js  full-slider.min.js  index.js
