[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cro"
version = "0.0.1"
description = "Utilities for the Cube Rotation Obelisk project."
readme = "README.md"
license = {text="MIT"}
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python",
]
dependencies = [
    "mujoco>=3.1.0",
    "numpy>=1.26",
    "perseus @ git+https://github.com/pculbertson/perseus.git@ba4b7aac563ff8dd3cc8630d32a6da356eee69f6",
    "ruamel.yaml>=0.18.6",
    "torch>=2.3.1",
    "torchvision>=0.18.1",
]

[options]
dependency_links = [
    "https://download.pytorch.org/whl/cu121",
]

[project.optional-dependencies]
dev = [
    "pre-commit>=3.7.1",
    "ruff>=0.4.9",
]

[tool.hatch.build.targets.wheel]
include = ["cro*"]

[tool.hatch.metadata]
allow-direct-references = true
